--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,30 +14,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-4">
-            <form
-              #registerForm="ngForm"
-              (ngSubmit)="register()"
-              autocomplete="off"
-            >
-              <h2 class="text-center text-primary">Sign Up</h2>
-              <hr />
-              <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" name="username" />
-              </div>
-              <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" name="password" />
-              </div>
-              <div class="form-group mt-3 text-center">
-                <button class="btn btn-success me-2" type="submit">
-                  Register
-                </button>
-                <button class="btn btn-default me-2" (click)="cancel()" type="submit">
-                  Cancel
-                </button>
-              </div>
-            </form>
+            <app-register
+              (registerModee)="cancelRegisterMode($event)"
+            ></app-register>
           </div>
         </div>
       </div>
