--- a/src/app/components/members/member-list/member-list.component.html
+++ b/src/app/components/members/member-list/member-list.component.html
@@ -1,1 +1,11 @@
-<p>member-list works!</p>
+<section id="members">
+  <div class="container">
+    <div class="row">
+      @for (item of members; track $index) {
+      <div class="col-2">
+        <app-member-card [member]="item"></app-member-card>
+      </div>
+      }
+    </div>
+  </div>
+</section>
