--- a/src/app/components/members/member-card/member-card.component.html
+++ b/src/app/components/members/member-card/member-card.component.html
@@ -1,6 +1,26 @@
 <div class="card">
   <div class="card-img-wrapper">
-    <img class="img-fluid" [src]="member?.photoUrl" [alt]="member?.displayName" />
+    <img
+      class="img-fluid"
+      [src]="member?.photoUrl"
+      [alt]="member?.displayName"
+    />
+    <ul class="list-inline member-icons animate text-center">
+      <li class="list-inline-item">
+        <button
+          routerLink="/members/{{ member?.id }}"
+          class="btn btn-primary"
+        >
+          <i class="fa fa-user"></i>
+        </button>
+      </li>
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
+      </li>
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
+      </li>
+    </ul>
   </div>
   <div class="card-body p-1">
     <h6 class="card-title text-center mb-1">
