--- a/src/app/components/members/member-details/member-details.component.html
+++ b/src/app/components/members/member-details/member-details.component.html
@@ -1,1 +1,57 @@
-<p>member-details works!</p>
+@if(member) {
+<div class="row">
+  <div class="col-4">
+    <div class="card">
+      <img
+        class="card-img img-thumbnail"
+        src="{{ member?.photoUrl }}"
+        [alt]="member?.displayName"
+      />
+      <div class="card-body">
+        <div>
+          <strong>Location:</strong>
+          <p>{{ member.address?.city }}, {{ member.address?.street }}</p>
+        </div>
+
+        <div>
+          <strong>Age:</strong>
+          <p>{{ member.age }}</p>
+        </div>
+
+        <div>
+          <strong>Last Active:</strong>
+          <p>{{ member.lastActive }}</p>
+        </div>
+      </div>
+      <div class="card-footer">
+        <div class="btn-group d-flex">
+          <button class="btn btn-primary">Like</button>
+          <button class="btn btn-success">Message</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="col-8">
+    <tabset class="member-tabset">
+      <tab heading="About {{ member?.displayName }}">
+        <h4>Description</h4>
+        <p>{{ member?.description }}</p>
+      </tab>
+      <tab heading="Interests">
+        <h4>Interests</h4>
+        <p>{{ member?.interests }}</p>
+      </tab>
+      <tab heading="Photos">
+        <ngx-gallery
+          [options]="galleryOptions"
+          [images]="galleryImages"
+        ></ngx-gallery>
+      </tab>
+      <tab heading="Messages">
+        <p>Messages will go here</p>
+      </tab>
+    </tabset>
+  </div> -->
+</div>
+}
