--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -92,7 +92,10 @@
           placeholder="Password"
         />
         <button class="btn btn-success my-2 my-sm-0" type="submit">
-          Login
+          <div class="d-flex flex-row align-items-center">
+            <span>Login</span>
+            <span class="spinner-border d-none spinner-border-sm"></span>
+          </div>
         </button>
       </form>
       }
