--- a/src/app/components/members/member-card/member-card.component.html
+++ b/src/app/components/members/member-card/member-card.component.html
@@ -1,5 +1,6 @@
 <div class="card">
   <div class="card-img-wrapper">
+    <!-- get the photo with IsMain bool -->
     <img
       class="img-fluid"
       [src]="member?.photoUrl"
@@ -7,10 +8,7 @@
     />
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
-        <button
-          routerLink="/members/{{ member?.id }}"
-          class="btn btn-primary"
-        >
+        <button routerLink="/members/{{ member?.id }}" class="btn btn-primary">
           <i class="fa fa-user"></i>
         </button>
       </li>
