--- a/src/app/layouts/blank-layout/blank-layout/blank-layout.component.html
+++ b/src/app/layouts/blank-layout/blank-layout/blank-layout.component.html
@@ -2,5 +2,13 @@
 <div class="container-fluid">
   <p>blank-layout works!</p>
 </div>
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-pulse-sync"
+  [fullScreen]="true"
+  ><p style="color: white">Loading...</p></ngx-spinner
+>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
