Photo Upload & Delete

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -43,6 +43,7 @@
       @if(loggedIn) {
 
       <div class="btn-group" dropdown>
+        <img width="30" height="30" src="{{ user?.PhotoUrl }}" alt="{{user?.Username}}">
         <a
           id="button-animated"
           dropdownToggle
