--- a/src/app/components/members/member-edit/member-edit.component.html
+++ b/src/app/components/members/member-edit/member-edit.component.html
@@ -110,11 +110,7 @@
       </tab>
 
       <tab heading="Edit Photos">
-        <gallery
-          thumbPosition="bottom"
-          class="gallery"
-          [items]="Images"
-        ></gallery>
+        <app-photo-editor (memberChange)="onMemberChange($event)" [member]="member"></app-photo-editor>
       </tab>
     </tabset>
   </div>
