--- a/src/app/components/members/member-list/member-list.component.html
+++ b/src/app/components/members/member-list/member-list.component.html
@@ -7,5 +7,21 @@
       </div>
       }
     </div>
+
+    @if (members?.items != null) {
+
+    <div
+      class="d-flex w-100 align-items-center justify-content-center mt-5 pt-3"
+    >
+      <div class="col-xs-12 col-12">
+        <pagination
+          class="justify-content-center"
+          [totalItems]="members.TotalCount"
+          [itemsPerPage]="members.pageSize"
+          (pageChanged)="pageChanged($event)"
+        ></pagination>
+      </div>
+    </div>
+    }
   </div>
 </section>
