--- a/src/app/components/members/member-list/member-list.component.html
+++ b/src/app/components/members/member-list/member-list.component.html
@@ -1,6 +1,85 @@
 <section id="members">
   <div class="container">
     <div class="row">
+      <div class="text-center mt-3">
+        <h2>Your Matches - {{ members?.TotalCount }}</h2>
+      </div>
+
+      <div class="container mt-3">
+        <form class="d-flex mb-3" #form="ngForm" (ngSubmit)="loadMembers()">
+          <div class="d-flex mx-2">
+            <label class="col-form-label">Age From: </label>
+            <input
+              type="number"
+              class="form-control"
+              name="minAge"
+              [(ngModel)]="userParams.minAge"
+              placeholder="18"
+            />
+          </div>
+
+          <div class="d-flex mx-2">
+            <label class="col-form-label">Age To: </label>
+            <input
+              type="number"
+              class="form-control"
+              name="maxAge"
+              [(ngModel)]="userParams.maxAge"
+              placeholder="50"
+            />
+          </div>
+
+          <div class="d-flex mx-2">
+            <label class="col-form-label">Show: </label>
+            @for (item of genderList; track $index) {
+            <div class="form-check mt-2 ms-2 form-check-inline">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="gender"
+                id="gender{{ $index }}"
+                value="{{ item.value }}"
+                [(ngModel)]="userParams.gender"
+              />
+              <label class="form-check-label" for="gender{{ $index }}">
+                {{ item.display }}
+              </label>
+            </div>
+            }
+            <button class="btn btn-primary ms-2" type="submit">
+              Apply Filters
+            </button>
+            <button class="btn btn-info ms-2" (click)="resetFilters()">
+              Reset Filters
+            </button>
+          </div>
+
+          <div class="col">
+            <div class="btn-group float-end">
+              <button
+                type="button"
+                name="orderBy"
+                class="btn btn-primary"
+                (click)="loadMembers()"
+                btnRadio="lastActive"
+                [(ngModel)]="userParams.orderBy"
+              >
+                Last Active
+              </button>
+              <button
+                type="button"
+                name="orderBy"
+                class="btn btn-primary"
+                (click)="loadMembers()"
+                btnRadio="created"
+                [(ngModel)]="userParams.orderBy"
+              >
+                Newest Members
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
       @for (item of members?.items; track $index) {
       <div class="col-2">
         <app-member-card [member]="item"></app-member-card>
