--- a/src/app/components/members/member-card/member-card.component.html
+++ b/src/app/components/members/member-card/member-card.component.html
@@ -13,7 +13,7 @@
         </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
+        <button (click)="toggleLike(member!.id)" class="btn btn-primary"><i class="fa fa-heart"></i></button>
       </li>
       <li class="list-inline-item">
         <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
@@ -24,6 +24,9 @@
     <h6 class="card-title text-center mb-1">
       <i class="fa fa-user me-2"></i>
       {{ member?.displayName }} , {{ member?.age }}
+      @if (hasLikes()) {
+        <i class="fa fa-heart me-2 text-danger"></i>
+      }
     </h6>
     <p class="card-text text-muted text-center">{{ member?.address?.city }}</p>
   </div>
