--- a/src/app/components/members/member-details/member-details.component.html
+++ b/src/app/components/members/member-details/member-details.component.html
@@ -34,28 +34,31 @@
   </div>
 
   <div class="col-8">
-    <tabset class="member-tabset">
-      <tab heading="About {{ member.displayName }}">
+    <tabset class="member-tabset" #memberTabs>
+      <tab
+        heading="About {{ member.displayName }}"
+        (selectTab)="onTabActivated($event)"
+      >
         <h4>Bio</h4>
         <p>{{ member.bio }}</p>
       </tab>
-      <tab heading="Looking For">
+      <tab heading="Looking For" (selectTab)="onTabActivated($event)">
         <h4>Looking For</h4>
         <p>{{ member.lookingFor }}</p>
       </tab>
-      <tab heading="Interests">
+      <tab heading="Interests" (selectTab)="onTabActivated($event)">
         <h4>Interests</h4>
         <p>{{ member.interests }}</p>
       </tab>
-      <tab heading="Photos">
+      <tab heading="Photos" (selectTab)="onTabActivated($event)">
         <gallery
           thumbPosition="bottom"
           class="gallery"
           [items]="Images"
         ></gallery>
       </tab>
-      <tab heading="Messages">
-        <p>Messages will go here</p>
+      <tab heading="Messages" (selectTab)="onTabActivated($event)">
+        <app-member-messages [userId]="member.id" [messages]="messages"></app-member-messages>
       </tab>
     </tabset>
   </div>
