--- a/src/app/components/members/member-details/member-details.component.html
+++ b/src/app/components/members/member-details/member-details.component.html
@@ -8,6 +8,21 @@
         [alt]="member.displayName"
       />
       <div class="card-body">
+        <div class="mb-2">
+          <i
+            class="fa fa-user-circle {{
+              _presenceService.onlineUsers().includes(member.displayName)
+                ? 'text-success'
+                : 'text-danger'
+            }} "
+          ></i>
+          {{
+            _presenceService.onlineUsers().includes(member.displayName)
+              ? "Online Now"
+              : "Offline"
+          }}
+        </div>
+
         <div>
           <strong>Location:</strong>
           <p>{{ member.address?.city }}, {{ member.address?.street }}</p>
@@ -58,7 +73,7 @@
         ></gallery>
       </tab>
       <tab heading="Messages" (selectTab)="onTabActivated($event)">
-        <app-member-messages [userId]="member.id" [messages]="messages"></app-member-messages>
+        <app-member-messages [userId]="member.id"></app-member-messages>
       </tab>
     </tabset>
   </div>
