--- a/src/app/components/members/member-messages/member-messages.component.html
+++ b/src/app/components/members/member-messages/member-messages.component.html
@@ -1,10 +1,10 @@
 <div class="card">
   <div class="card-body">
-    @if(messages().length === 0) {
+    @if(this._messageService.messageThread().length === 0) {
     <p>No messages yet</p>
     } @else {
     <ul class="chat list-unstyled">
-      @for (item of messages(); track item.id) {
+      @for (item of this._messageService.messageThread(); track item.id) {
       <li class="left clearfix d-flex align-items-center gap-3">
         <span class="chat-img pull-left">
           <img
@@ -38,9 +38,12 @@
     }
   </div>
   <div class="card-footer">
-    <form>
+    <form #messageForm="ngForm" (ngSubmit)="sendMessage()">
       <input
+        required
         type="text"
+        [(ngModel)]="messageContent"
+        name="messageContent"
         class="form-control input-sm"
         placeholder="Send a private message"
       />
